[workspace]
[package]
name = "try_minimal"
version = "0.1.0"
edition = "2021"


[dependencies]
vstkit-core = { path = "../../../vstkit-core" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
vstkit-metering = { path = "../../../vstkit-metering" }
